src/App.css
@import url('https://fonts.googleapis.com/css?family=Stalinist+One');
@import url('https://fonts.googleapis.com/css?family=Raleway');
@import url('https://fonts.googleapis.com/css?family=Comfortaa');

* {
  margin:auto;
}
Link {
  text-decoration: none;
}
/*

NAV

*/
.site-top-image{
  background-image: url("../src/images/basketball.jpeg");
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  height: 400px; 
  text-align: center;
}

.nav-menu {
  box-shadow: 
    inset 0px 11px 8px -10px #00181D, 
    0px 11px 8px -10px #00181D;  
  text-align: center;
  background-color:#00CCFF;
  padding-top:25px;
  padding-bottom:25px;
  width: 100%;
  border-bottom-right-radius: 10px;
  border-bottom-left-radius: 10px;
}
.nav-menu-fixed {
  position: fixed;
  top: 0;
  box-shadow: 
    0px 11px 8px -10px #00181D;  
  text-align: center;
  background-color:#00CCFF;
  padding-top:25px;
  padding-bottom:25px;
  width: 100%;
  border-bottom-right-radius: 10px;
  border-bottom-left-radius: 10px;
}
.nav-links-container {
  border: 2px solid #00181D;
  border-radius: 10px;
  margin-right:25px;
  margin-left:25px;
}
.site-title h1{
  padding-top: 150px;
  font-size: 50px;
  color:#00CCFF;
  font-family: 'Stalinist One', cursive;
}
.site-title h2{
  color: #FF004D;
  font-family: 'Raleway', sans-serif;
}
.site-title h2:hover {
  animation: Logo-spin 2s infinite;
}
.nav-links {
  text-decoration: none;
  margin: 10px;
  color: #00181D;
  padding:10px;
  font-weight: bold;
  font-size: 18px;
  font-family: 'Raleway', sans-serif;
}

.nav-links:hover {
  color:#00CCFF;
  background-color: #00181D;
  border-top-left-radius: 20px;
  border-bottom-right-radius: 20px;
  border-top-right-radius: 5px;
  border-bottom-left-radius: 5px;
}
.active {
  color:#00CCFF;
  background-color: #00181D;
  border-top-left-radius: 20px;
  border-bottom-right-radius: 20px;
  border-top-right-radius: 5px;
  border-bottom-left-radius: 5px;
}

/*

PAGE CONTENT

*/

.content-container{
  margin: 0px 25px 75px 25px;
  font-family: 'Raleway', sans-serif;
}

.page-title {
  color: #00181D;
  margin-top:25px;
  text-align: center;
  font-family: 'Comfortaa', cursive;
}

hr { 
    margin: 25px 0;
    height: 1px;
    border: 0;
    background: black;
    background: -webkit-gradient(linear, 0 0, 100% 0, from(#fff), to(#fff), color-stop(50%, #00181D));
}
/*

HOME

*/

.new-blog-header {
  cursor: pointer;
  text-align: center;
  margin-bottom: 50px;
  background-color: #FFF;
  color: #00CCFF;
  padding: 5px;
  margin: 10px 125px 10px 125px; 
  border-radius: 5px;
  border:1px solid #00CCFF; 
}
.new-blog-header:hover {
  background-color: #00CCFF;
  color: #FFF;
}
.blog-container {
  background-color: #00181D;
  color: #fff;
  margin:15px;
  border:1px solid #00CCFF;
  padding: 15px;
  letter-spacing: 2.5px;
  border-radius: 5px;
}
.blog-link .blog-container:hover {
  background-color: #fff;
  color: #00181D;
  cursor: pointer;
}
.blog-title {
  font-size: 30px;
  text-align: center;
  color: #00CCFF; 
  font-family: 'Comfortaa', cursive;
}
/*

Form

*/
.blog-form {
  margin:25px;
  padding: 25px;
  border:1px solid black;
  font-family: 'Raleway', sans-serif;
  border-radius: 25px;
  text-align: center;
  background-color: #00CCFF;
}
.blog-title-box {
  border:1px solid black;
  margin: 10px 0px 25px 0px;
  width: 25%;
  border-radius: 25px;
  font-size: 15px;
  padding:5px;
  font-family: 'Raleway', sans-serif;
  text-align: center;
}

.blog-body-box {
  border:1px solid black;
  margin: 10px 0px 25px 0px;
  width: 95%;
  border-radius: 25px;
  height: 200px;
  font-size: 15px;
  padding:5px 15px 5px 15px;
  font-family: 'Raleway', sans-serif;
}
.blog-submit {
  cursor: pointer;
  color:#FF004D;
  border:1px solid #FF004D;
  background-color: #fff;
  font-family: 'Stalinist One', cursive;
  padding:10px;
  border-top-left-radius: 20px;
  border-bottom-right-radius: 20px;
  border-top-right-radius: 5px;
  border-bottom-left-radius: 5px; 
}
.blog-submit:hover {
  background-color: #FF004D;
  color:#FFF;
  border-top-right-radius: 20px;
  border-bottom-left-radius: 20px;
  border-top-left-radius: 5px;
  border-bottom-right-radius: 5px; 
}

.admin-options {
  display: flex;
  flex-wrap: nowrap;
  justify-content: space-around;
}

button {
  cursor: pointer;
  color:#FF004D;
  border:1px solid #FF004D;
  background-color: #fff;
  font-family: 'Raleway', sans-serif;
  padding:7px;
  border-top-left-radius: 15px;
  border-bottom-right-radius: 15px;
  border-top-right-radius: 5px;
  border-bottom-left-radius: 5px; 
}

button:hover {
  background-color: #FF004D;
  color:#FFF;
  border-top-right-radius: 15px;
  border-bottom-left-radius: 15px;
  border-top-left-radius: 5px;
  border-bottom-right-radius: 5px; 
}
/*

animations

*/

@keyframes Logo-spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}

